packages/frontend/app/components/layout/styles.css
/* ? Search List Item List View*/
.search-list-item.list {
    display: grid;
    grid-template-columns: min-content 1fr;
    grid-template-rows: min-content 1fr min-content min-content;
    grid-template-areas:
        "icon title"
        "icon summary"
        "tags tags"
        "stats stats";
}

.search-list-item.gallery {
    display: grid;
    grid-template-columns: min-content 1fr;
    grid-template-rows: min-content min-content 1fr min-content min-content;
    grid-template-areas:
        "gallery gallery"
        "icon title"
        "summary summary"
        "tags tags"
        "stats stats";
}

/* MD+ */
@media screen and (min-width: 47rem) {
    .search-list-item.list {
        grid-template-areas:
            "icon title"
            "icon summary"
            "icon tags"
            "stats stats";
    }

    .search-list-item.gallery {
        grid-template-rows: min-content min-content 1fr min-content min-content;
        grid-template-areas:
            "gallery gallery"
            "icon title"
            "summary summary"
            "tags tags"
            "stats stats";
    }
}

/* LG+ */
@media screen and (min-width: 63rem) {
    .search-list-item.list {
        grid-template-columns: min-content 1fr min-content;
        grid-template-rows: min-content 1fr auto;
        grid-template-areas:
            "icon title stats"
            "icon summary stats"
            "icon tags stats";
    }

    .search-list-item.gallery {
        grid-template-rows: min-content min-content 1fr min-content min-content;
        grid-template-areas:
            "gallery gallery"
            "icon title"
            "summary summary"
            "tags tags"
            "stats stats";
    }
}

/* Page header */
.page-layout {
    display: grid;
    grid-template-rows: auto 1fr auto;
    grid-template-columns: 1fr;
    grid-template-areas:
        "header"
        "content"
        "sidebar";
}

.page-header {
    display: grid;
    grid-area: header;
}

@media (min-width: 64rem) {
    .page-layout {
        grid-template-rows: auto auto 1fr;
        grid-template-columns: 19rem 1fr;
        grid-template-areas:
            "header header"
            "sidebar content"
            "dummy content";
    }
}

/* FOOTER */
.footer-grid {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: repeat(4, auto);
    gap: 2rem;
    grid-template-areas:
        "logo logo"
        "links-1 links-2"
        "links-3 dummy"
        "buttons buttons";
}

@media (min-width: 24rem) {
    .footer-grid {
        grid-template-columns: repeat(3, auto);
        grid-template-rows: auto auto auto;
        grid-template-areas:
            "logo logo logo"
            "links-1 links-2 links-3"
            "buttons buttons buttons";
    }
}

@media (min-width: 64rem) {
    .footer-grid {
        grid-template-columns: repeat(5, auto);
        grid-template-rows: auto;
        grid-template-areas: "logo links-1 links-2 links-3 buttons buttons";
    }
}

